Fix z-index bug Add data to callback when winning the protein game - this will need to be analyzed and scored for gems

--- a/src/stylus/zoom.styl
+++ b/src/stylus/zoom.styl
@@ -3,7 +3,7 @@
     position: absolute
     left: 1800px
     bottom: 4px
-    z-index: 20
+    z-index: 2
     width: 100px
     height: 100px
     background-image: url('../resources/fablevision/huds/tutorial_questionmark_button_base.png')
